kube/kubex/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubex
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: kubex
  ports:
    - port: 80
      targetPort: 80
