kube/kubex/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubex
spec:
  rules:
    - host: ${HOST}
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: kubex
                port:
                  number: 80
